feat: adapt journeys to reconciled domain model
